# circuit-sdk

./: .gitignore  README.md  RELEASE.md  SDK.md  package-lock.json  package.json  tsconfig.base.json
apps/cli/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SECURITY.md  SPEC.md  package.json
apps/cli/docs/: AGENT_LOCAL_TO_MESH.md  agent-cloud-spec.md  commands.md  configuration.md
apps/cli/src/: config.js  index.js  theme.js
apps/cli/src/core/: context.js  menu.js  registry.js  render.js  splash.js
apps/cli/src/modules/: about.js  agent.js  chat.js  data.js  models.js  network.js  node.js  status.js  swarm.js  wallet.js
apps/cli/src/services/: agent-commands.js  agents.js  bundle.js  circuitNode.js  http.js  inference.js  models.js  node.js  owner-auth.js  priceFeed.js  solana.js  vault.js  wallet.js  x402.js
apps/cli/src/ui/: banner.js  chart.js  components.js  index.js  layout.js  meshIntro.js  prompts.js  screen.js
apps/cli/src/util/: async.js  format.js
apps/cli/test/: bundle-consistency.test.mjs  command-signing.test.mjs  owner-auth-consistency.test.mjs
apps/mcp/: README.md  package.json
apps/mcp/src/: server.js
apps/mcp/test/: smoke.mjs
circuit-py/: README.md  pyproject.toml
circuit-py/circuit/: __init__.py  config.py  data.py  inference.py  x402.py
circuit-py/tests/: test_clients.py  test_x402.py
docs/: AGENT_SKILLS_SPEC.md  agents.md  architecture.md  canonical-serialization.md  cli.md  contributing-a-node.md  getting-started.md  packages.md  verified-intents.md  x402.md
scripts/: publish.sh
(+2 files in other folders)
